checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__operation_directives__input_missing_field.snap
---
source: checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 30,
            file: 0,
            builtin: false,
        },
        message: TypeMismatch {
            type: "MyInput",
        },
        additional_info: [
            (
                Pos {
                    line: 14,
                    column: 16,
                    file: 0,
                    builtin: false,
                },
                RequiredFieldNotSpecified {
                    name: "int",
                },
            ),
        ],
    },
]
